# ADLX-SDK-Wrapper

./: .gitignore  README.md
ADLX 3D Settings/: CMakeLists.txt  adlx3DSettings.cpp
ADLX Display Settings/: CMakeLists.txt  adlxDisplaySettings.cpp
ADLX GPU Auto Tuning/: CMakeLists.txt  adlxAutoTuning.cpp
ADLX Performance Metrics/: CMakeLists.txt  adlxPerformanceMetrics.cpp
ADLX Wrapper/: CMakeLists.txt  adlxWrapper.cpp
TestConsole/: TestConsole.sln
TestConsole/TestConsole/: Backend.cs  Program.cs  TestConsole.csproj
